--- a/thesis/04Pozafunkcjonalne.tex
+++ b/thesis/04Pozafunkcjonalne.tex
@@ -4,10 +4,153 @@
 \section{Wstęp}
 \label{Chapter41}
 
-W niniejszym rozdziale zostaną zaprezentowane i krótko opisane charakterystyki oraz wymagania pozafunkcjonalne obowiązujące dla systemu. Ponadto zostanie podjęta próba weryfikacji, które wymagania udało się spełnić i jakie są perspektywy rozwoju
+W niniejszym rozdziale zostaną zaprezentowane i krótko opisane charakterystyki oraz wymagania pozafunkcjonalne obowiązujące dla systemu. Dodatkowo, podjęta zostaje tu próba weryfikacji, które wymagania udało się spełnić i jakie są perspektywy dalszego rozwoju projektu.
 
 \section{Charakterystyki oprogramowania}
 \label{Chapter42}
+
+Projektując system, pod uwagę brane były następujące charakterystyki:
+
+\begin{itemize}
+\item{Funkcjonalna poprawność}
+\item{Zużycie zasobów}
+\item{Współistnienie}
+\item{Interoperacyjność}
+\item{Łatwość nauczenia się}
+\item{Ochrona użytkownika przed błędami}
+\item{Estetyka interfejsu Użytkownika}
+\item{Dostępność personalna}
+\item{Bezpieczeństwo (wolność od ryzyka)}
+\item{Kompletność kontekstowa}
+\item{Odporność na wady}
+\item{Odtwarzalność}
+\item{Integralność}
+\item{Niezaprzeczalność}
+\item{Łatwość instalacji}
+\item{Łatwość adaptacji}
+\item{Łatwość zamiany}
+\item{Łatwość zmiany}
+\item{Łatwość testowania}
+\item{Poufność}
+\item{Identyfikowalność}
+\item{Autentyczność}
+\item{Analizowalność}
+\end{itemize}
+
+Wymienione powyżej charakterystyki były rozpatrywane w fazach projektowania i implementacji z zastosowaniem różnych priorytetów. Dla przykładu, najważniejsza okazała się %DOKOŃCZYĆ%
+
+cji.
+Najważniejsza okazała się dokładność, gdyż system ma wspomagać ocenę jakości pracy naukowej, a zatem powinien udostępniać rzetelne informacje. Dużą uwagę zwrócono na fazę oczyszczania
+danych, choć w wyniku napotkanych trudności, nie uzyskano tak dużej dokładności jaką zakładano.
+Na bezpieczeństwo położono duży nacisk ze względu na wrażliwość danych i dostepu do nich –
+zastosowano silny mechanizm uprawnień kontrolowany przez administratora. Odporność na błędy
+154.3. Wymagania pozafunkcjonalne i ich weryﬁkacja 16
+została ogólnie zapewniona przez zastosowanie obsługi wyjątków, częste testowanie systemu oraz
+sprawdzanie poprawności danych.
+Modułowość sprawiła, iż łatwe staje się przeprowadzanie zmian i poprawienie działania jednej
+z części systemu. Poprzez dobre i wyczerpujące komentowanie kodu, zwłaszcza w miejscach o
+większym stopniu złożoności, osiągnięto łatwiejszą możliwość analizy i wprowadzanie potrzebnych
+korekt.
+BIS-2 korzysta ze sprawdzonych i uznanych narzędzi omówionych w rozdziale 6. To sprawia,
+iż zachowana została adaptowalność i przenośność systemu, chociażby dzięki wybrania języka programowania Java. Także współdziałanie z innymi aplikacjami nie powinno powodować żadnych
+komplikacji. System zarządzania bazą danych PostgreSQL zapewnia narzędzia związane z odtwarzaniem danych po awarii, co można wykorzystać w systemie. Charakterystyka czasowa nie
+była najważniejszym wymaganiem dla BIS-2, jednak dołożono wszelkich starań, aby wykonywanie
+operacji przez aplikację było jak najszybsze. Najbardziej czasochłonnymi procesami okazały się:
+pozyskiwanie danych o publikacjach z zewnętrznych serwisów oraz algorytm oczyszczania danych,
+a zatem etapy w większości sytuacji niebezpośrednio odczuwalne przez użytkownika.
+
+Każde z wymagań w ramach powyższych charakterystyk oprogramowania zostało określone za pomocą etykiety określającej jej ważność oraz trudność implementacji w formacie \textit{[ważność]/[trudność_implementacji]}. Wartości te wyrażone są w następującej skali:
+\begin{itemize}
+\item{H (ang.~\definicja{high}) -- wysoka;
+\item{M (ang.~\definicja{medium}) -- średnia;
+\item{L (ang.~\definicja{low}) -- niska.
+\end{itemize}
+
+Funkcjonalna poprawność
+R1: Wszystkie wartości mają być prezentowane z dokładnością do 2 miejsc do przecinku. H/L
+Charakterystyka czasowa
+R2: Wyświetlanie ankiety powinno odbywać się z maksymalną prędkością nie większą iż 4 sekundy. H/L
+R3: Generowanie raportów powinno odbywać się ze średnią prędkością nie większą iż 1 godzina. M/M
+R54: Należy zdefiniować klasy operacji w zależności od czasu ich trwania (klasy: bez komunikatu potwierdzającego wykonanie, z potwierdzeniem wykonania, wykonywane na serwerze w tle) M/M
+Zużycie zasobów
+R4: System nie powinien wykorzystywać więcej serwerów niż jeden. M/L
+R5: System powinien działać poprawnie przy nawet 10000 użytkowników zalogowanych jednocześnie. H/M
+R55: Należy kolejkować zadania do wykonania przez system, które nie muszą zostać wykonane natychmiastowo. M/M
+R57: Możliwość pracy dla ankietera i respondenta na średniej klasy laptopie (CPU 2GHz, RAM 4GB). H/L
+Współistnienie
+R6: Jedynym kryterium działania systemu ankiet (bez raportów) jest działająca przeglądarka. H/L
+R7: System generowania raportów może być osobną aplikacją, działać na specjalnym potrzebnym do tego sprzęcie i oprogramowaniu. L/L
+R58: Wszystkie potrzebne dane z zewnętrznych systemów przechowywać lokalnie i synchronizować . M/H
+R59: Kolejkować e-maile w systemie, podczas gdy nie da się ich wysłać (awaria ePoczty). H/M
+Interoperacyjność
+R8: System ma wymieniać potrzebne dane z systemami uczelnianymi. eKonto, eDziekanat, ePoczta. Dane mają być aktualne. H/M
+Łatwość nauczenia się
+R9: Interfejs użytkownika (dla ankietowanych) powinien być całkowicie intuicyjny. H/M
+R10: Interfejs użytkownika (generowanie raportów, tworzenie ankiet) może wymagać drobnego szkolenia. M/L
+Ochrona użytkownika przed błędami
+R11: Dodatkowe potwierdzenie chęci wykonania operacji nieodwracalnych (nawet dla administratora), albo możliwość przywrócenia usuniętych danych przez jakiś czas. H/M
+R12: Dla dużych ankiet, zatwierdzenie odesłania jej przez ankietowanego. M/L
+R30: Potwierdzenie przed rozesłaniem ankiet. M/L
+R56: Lista operacji wykonywanych w tle. M/L
+Estetyka Interfjesu Użytkownika
+R13: Ma zachecać a nie zniechęcać, przyjazne, czytelne. H/M
+Dostępność personalna
+R14: Przewidzieć na poziomie architektury, możliwośc rozbudowy np. dla osób niedowidzących. L/M
+Bezpieczeństwo (wolność od ryzyka)
+R15: Dane trzymane w systemie muszą być tymi, uzyskanymi w ankietach H/L
+R31: Projekt systemu należy poddać analizie z wykorzystaniem metody ATAM. M/M
+Kompletność kontekstowa
+R16: System ma działać dla: IE 7.0+, Firefox 15, Opera 12 H/M
+R62: Przygotować raport jak system zachowuje się na platformach mobilnych. L/L
+Dostępność techniczna
+R17: System może mieć przerwę serwisową, ale wtedy specjalny ekran do kiedy będzie trwać. H/L
+Odporność na wady
+R18: Gdy nastąpi awaria innych systemów np. eKonta, należy poinformować użytkownika o błędzie i uniemożliwić mu dalsze działanie w systemie. H/L
+Odtwarzalność
+R19: Odtwarzanie całego systemu 3h. M/L
+R20: Kopia zapasowa bazy danych, raz na dobę. H/L
+R64: Dostępność instrukcji odtwarzania. H/L
+R65: Wykonywanie operacji w transakcjach tam gdzie to możliwe. H/L
+Integralność
+R34: Baza danych powinna być chroniona przed nieuprawnionym dostępem [modyfikacją / usunięciem] w następujący sposób: username/pass. H/L
+R35: System powinien być odporny na następujące próby nielegalnego dostępu: dostęp fizyczny do serwera. M/L
+R36: Należy chronić, szyfrować dane przesyłane z i do systemu. M/L
+Niezaprzeczalność
+R22: System musi posiadać logi (zalogowanie w systemie, stworzenie/edycja/usunięcie/wysłanie/wypełnienie ankiety), aby móc udokumentować skąd pochodzą dane. H/L
+Łatwość instalacji
+R24: Należy utworzyć raport z łatwości adaptacji. Gdzie znajdują się adaptery. M/L
+R41: System umożliwiać łatwą aktualizacje. Zakładamy, że wersja Moodle'a pozostaje bez zmian. H/H
+Łatwość adaptacji
+R42: System powinien współpracować z systemem BI (raportowanie). H/H
+Łatwość zamiany
+R43: System powinien umożliwiać wczytanie wszystkich danych z poprzedniej wersji. H/M
+R44: Procedura wymiany oprogramowania powinna trwać nie dłużej niż 2 dni i odbywać się w następujący sposób: zgodność z instrukcją. M/L
+R61: Brać pod uwagę podczas projektowania systemu, możliwość wielojęzyczności. M/M
+Łatwość zmiany
+R51: System powinien być przygotowany na wprowadzenie następujących zmian: nowe typy raportów, nowe typy pytań, modyfikacje interfejsów systemów zewnętrznych. M/M
+Łatwość testowania
+R52: „Atrapy” systemów zewnętrznych (w tym eKonto). M/M
+R53: Należy umożliwić przełączanie systemu między trybem testowym i produkcyjnym. M/L
+Interoperacyjność
+R26: System ma pobierać dane z systemu eDziekanat w następujący sposób: SOAP. H/M
+R27: System ma przesyłać dane o wiadomościach do wysłania do systemu ePoczta w następujący sposób: SOAP. H/M
+R28: System ma pobierać dane do autoryzacji z systemu eKonto w następujący sposób: SOAP. H/M
+R29: System ma przesyłać wyniki ankiet do systemu raportowania. (dodefiniować później!) H/M
+Poufność
+R32: Uwierzytelnianie i autoryzacja dla każdej operacji. H/L
+Identyfikowalność
+R38: System ma umożliwiać identyfikowanie podmiotów (osobno administratorów, ankieterów, respondentów) podejmujących działania: tworzenie ankiet, odpowiadanie w 
+ankietach. H/M
+Autentyczność
+R39: Gdy student staje się absolwentem, należy umożliwić mu dalsze logowanie się do systemu bez użycia eKonta. H/M
+Analizowalność
+R45: Komentarze w kodzie źródłowym powinny być w języku angielskim. M/L
+R46: Kod źródłowy sytemu powinien być utworzony zgodnie ze standardami Moodle'a. M/L
+R47: System powinien zawierać testy jednostkowe. M/M
+R48: System powinien rejestrować stack trace i rodzaj błędu (fatal, warning). H/L
+R49: Wraz z kodem źródłowym systemu należy dostarczyć dokumentację: jak opisano w PID. H/M
+R50: Logować niewłaściwe wywołania metod. H/L
+
 %
 %Poniżej są jeszcze stare charakterystyki oprogramowania (wtedy myśleliśmy, że to mądrze brzmi), kategorii wymagań pozafunkcjonalnych. Obecnie to się trochę zmieniło, zatem ta lista będzie znacznie bardziej rozbudowana.
 %
